Add simple personal website

--- a/index.html
+++ b/index.html
@@ -1,437 +1,29 @@
 <!DOCTYPE html>
-<html style="background-color: #07374a; /* Ocean blue color */">
-  <head>
-    <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Data Scientist Portfolio</title>
-    <script src="https://code.jquery.com/jquery-3.5.0.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-
- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-
-    <style>
-      /* Add some style to the page */
-html {
-  scroll-behavior: smooth;
-}
-      body {
-        font-family: "Times New Roman", sans-serif;
-        margin: 0;
-        padding: 0;
-//background-color: #07374a; /* Ocean blue color */;
-  //background: linear-gradient(141deg, #07374a 0%, #1fc8db 51%, #2cb5e8 75%);
-background: url("images/bg.jpg") no-repeat;
-  /* Keep the inherited background full size. */
-  background-attachment: fixed; 
-  background-size: cover;
-      }
-      header {
-	background-color:black;
-        color: white;
-        padding: 20px;
-        padding-top: 90px; /* Add a top padding equal to the height of the nav bar */
-        text-align: center;
-      }
-      h1 {
-        margin: 0;
-      }
-      nav {
-        background-color: #00c3a7; /* Ocean green color */
-        display: flex;
-        justify-content: space-between;
-        padding: 20px;
-        position: fixed;
-        top: 0;
-        width: 100%;
-        z-index: 3;
-      }
-      nav ul {
-        display: flex;
-        list-style: none;
-        margin: 0;
-        padding: 0;
-      }
-      nav li {
-        margin: 0 10px;
-      }
-      nav a {
-        color: white;
-        text-decoration: none;
-      }
-      main {
-        padding: 20px;
-      }
-      section {
-        margin: 20px 0;
-        margin-top: 60px; /* Add a top margin equal to the height of the nav bar */
-        text-align: center;
-      }
-      #education {
-        //background-color: /*#00b4d8*/; /* Ocean blue color */
- background-color: rgba(255, 255, 255, .15);  
- backdrop-filter: blur(5px);
-border-radius: 5px;
-padding: 20px;
-      }
-      #about {
-        //background-color: /*#00b4d8*/; /* Ocean blue color */
- background-color: rgba(255, 255, 255, .15);  
- backdrop-filter: blur(5px);
-border-radius: 5px;
-padding: 20px;
-      }
-      #work-experience {
-        //background-color: #00c3a7; /* Ocean green color */
- background-color: rgba(255, 255, 255, .15);  
- backdrop-filter: blur(5px);
-border-radius: 5px;
-padding: 20px;
-      }
-      #research-projects {
-        //background-color: #00d8c3; /* Ocean blue-green color */
- background-color: rgba(255, 255, 255, .15);  
- backdrop-filter: blur(5px);
-border-radius: 5px;
-padding: 20px;
-      }
-      #academic-projects {
-        //background-color: #c3e8ff; /* Light ocean blue color */
- background-color: rgba(255, 255, 255, .15);  
- backdrop-filter: blur(5px);
-border-radius: 5px;
-padding: 20px;
-      }
-      h2 {
-        margin: 0 0 10px 0;
-      }
-      .project-row {
-        justify-content: space-between;
-	padding: 20px;
-      }
-.project {
-	padding: 20px;
-justify-content:space-between;
-      }
-	.project p,h1,h2,h3,h4,h5{
-color:black;
-}
-.project h2,h3{
-font-weight: bold;
-}
-      .project a {
-        background-color: #00c3a7; /* Ocean green color */
-        color: white;
-        display: inline-block;
-        padding: 10px 15px;
-        font-size: 14px; /* Make the font smaller */
-        text-align: center;
-border-radius: 10px;
-        text-decoration: none;
-      }
-      footer {
-        background-color: #0077be; /* Ocean blue color */
-        color: white;
-        padding: 20px;
-        text-align: center;
-      }
-
-
-:root {
-  --primary: #0077be;
-  //--primary-gradient: linear-gradient(45deg, #153c7e 0%, #37a9e1 100%);
-}
-.section-header {
-  text-align: center;
-}
-.section-header h2 {
-	
-  font-size: 28px;
-  font-weight: 700;
-  margin-bottom: 16px;
-}
-.section-header hr {
-  border: 1px solid #fff;
-  width: 56px;
-}
-
-.steps {
-  position: relative;
-  margin-top: 32px;
-}
-.steps::after {
-  content: "";
-  position: absolute;
-  width: 1px;
-  background-color: white;
-  opacity: 0.4;
-  top: 0;
-  bottom: 0;
-  left: 50%;
-}
-
-.steps .content p {
-  color: #676767;
-  font-size: 16px;
-font-weight: 530;
-}
-
-.steps .content h2 {
-  font-weight: 600;
-  font-size: 20px;
-  color: black;
-}
-
-.steps .content h3 {
-  font-weight: 600;
-  font-size: 17px;
-  color: black;
-}
-
-.steps-container {
-  position: relative;
-  background-color: inherit;
-  width: calc(50% + 32px);
-}
-
-.steps-container .content {
-  padding: 32px;
-  background-color: white;
-  position: relative;
-  border-radius: 0px 0px 80px 0px;
-  box-shadow: 0px 16px 27px rgb(0 11 30 / 10%);
-}
-
-.steps .steps-container:nth-child(even) {
-  left: calc(50% - 32px);
-  flex-direction: row-reverse;
-}
-
-.steps-container {
-  display: flex;
-}
-
-.steps .steps-container .date {
-  font-weight: 900;
-  font-size: 16px;
-  color: #ffffff;
-  margin-bottom: 10px;
-  width: 62px;
-  height: 62px;
-  background-color: var(--primary);
-  border-radius: 50%;
-  flex-shrink: 0;
-  align-items: center;
-  display: flex;
-  justify-content: center;
-  z-index: 1;
-}
-
-.step-line {
-  width: 40px;
-  background-color: #fff;
-  height: 1px;
-  margin-top: 31px;
-  opacity: 0.4;
-  flex-shrink: 0;
-}
-
-@media (max-width: 767px) {
-  .steps::after {
-    left: 32px;
-  }
-  .steps-container {
-    left: 0;
-    flex-direction: row-reverse;    width: auto;
-    margin-bottom: 16px;
-  }
-  .steps .steps-container:nth-child(even) {
-    left: 0;
-  }
-}
-
-
-
-
-
-    </style>
-  </head>
-  <body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mukkesh Ganesh</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
     <header>
-      <h1 style="color:white;">Portfolio</h1>
+        <img src="images/pfp.png" alt="Mukkesh Ganesh" class="profile">
+        <h1>Mukkesh Ganesh</h1>
     </header>
-    <nav>
-    <ul>
-        <li><a href="#about" class="scrollLink">About</a></li>
-        <li><a href="#work-experience" class="scrollLink">Work Experience</a></li>
-        <li><a href="#research-projects" class="scrollLink">Research Projects</a></li>
-        <li><a href="#academic-projects" class="scrollLink">Academic Projects</a></li>
-      </ul>
-    </nav>
     <main>
-      <section id="about">
-	<img style="height:300px;width:auto;" src="images/pfp.png">
-        <h2 style="color: white;">MUKKESH GANESH</h2>
-        <div class="section-content">
-          <p style="color: white;">Insert information about yourself as a data scientist here.</p>
-	        <div class="footer-links">
-	<p style="color: white;">Github:<a style="color:black;" href="www.github.com/void-mckenzie" target="_blank" rel="noopener noreferrer">void-mckenzie</a>; Email: <span style="color:black;"> mganesh@usc.edu , mukkeshganesh@gmail.com ;</span> LinkedIn:<a style="color:black;" href="https://www.linkedin.com/in/mukkesh-g/" target="_blank" rel="noopener noreferrer">Mukkesh Ganesh</a></p>
-      </div>
-        </div>
-      </section>
-
-
-
-<section id="education">
-      <div class="container">
-    <div class="section-header">
-      <h2 style="font-weight:900;font-size:40px;">EDUCATION</h2>
-      <hr>
-    </div>
-    <div class="steps">
-      <div class="steps-container">
-        <div class="content">
-          <h2>University of Southern California (2021-2023)</h2>
-	  <h3>Master of Science in Computer Science | GPA: 3.5</h3>
-          <p> <strong>Courses:</strong> Analysis of Algorithms, Artificial Intelligence, Machine Learning, Deep Learning, Natural Language Processing, Database Systems.</p>
-        </div>
-        <i class="step-line"></i>
-        <div class="date">2021</div>
-      </div>
-      <div class="steps-container">
-        <div class="content">
-          <h2>Vellore Institute of Technology (2017-2021)</h2>
-	  <h3>Bachelor of Technology in Computer Science and Engineering | GPA: 9.32</h3>
-          <p> <strong>Selected Courses:</strong> Machine Learning, Calculus, Statistics, Parallel and Distributed Computing, Virtualization, Computer Architecture, Social and Information Networks.</p>
-	  <p> <strong>Activities:</strong> Undergraduate Research, Linux Club, Hackathons.</p>
-        </div>
-        <i class="step-line"></i>
-        <div class="date">2017</div>
-       </div>
-      <div class="steps-container">
-        <div class="content">
-          <h2>Maharishi Vidya Mandir (2015-2017)</h2>
-	  <h3>AISSCE | Grade: 88.4%</h3>
-          <p> <strong>Courses:</strong> Physics, Chemistry, Mathematics, English and Computer Science(100%).</p>
-	  <p> <strong>Activities:</strong> Olympiads, Quiz, Speedcubing, Keyboard.</p>
-        </div>
-        <i class="step-line"></i>
-        <div class="date">2015</div>
-      </div>
-    </div>
-  </div>
-</section>
-
-      <section id="work-experience">
-        <h2 style="font-weight:900;font-size:40px;">WORK EXPERIENCE</h2>
-        <div class="section-content">
-          <h3>Current Position</h3>
-          <p>Insert details about your current position as a data scientist here, including the company you work for and the projects you are currently working on.</p>
-          <h3>Past Positions</h3>
-          <div class="section-content">
-            <p>Insert details about any past positions as a data scientist here, including the companies you worked for and the projects you worked on.</p>
-          </div>
-        </div>
-      </section>
-      <section id="research-projects">
-        <h2 style="font-weight:900;font-size:40px;">RESEARCH PROJECTS</h2>
-        <div class="section-content">
-          <div class="row project-row">
-            <div class="col-md-6 col-xs-12 project">
-              <img style="height:50%;width:50%;" src="images/DR.png" alt="Project 1">
-              <h3 style="font-size:23px">Diabetic Retinopathy Diagnosis with InceptionResNetV2, Xception and EfficientNetB3</h3>
-		<h4> December 2020</h4>
-		<h4>Tech Stack: Python, Tensorflow, Keras and SciKit-Learn</h4>
-              <p>Investigated performance of transfer learning enhanced models on India-specific IDRiD dataset and experimented<br>with data augmentation. Increased SOTA Accuracy. Presented at ICRTAC 2020. </p>
-              <a href="https://link.springer.com/chapter/10.1007/978-981-16-6448-9_41" target="_blank" rel="noopener noreferrer">View Project</a>
-            </div>
-            <div class="col-md-6 col-xs-12 project">
-              <img style="height:50%;width:50%;" src="images/autoenc.PNG" alt="Project 2">
-              <h3>Autoencoder based Network Anomaly Detection</h3>
-		<h4>October 2020</h4>
-		<h4>Tech Stack: Python, Tensorflow, Keras and SciKit-Learn</h4>
-              <p>Examined NLS-KDD dataset to train and evaluate performance of Denoising, Sparse and hybrid Autoencoders<br>for Network Intrusion Detection. Presented at IEEE - TEMSMET 2020. </p>
-              <a href="https://ieeexplore.ieee.org/abstract/document/9557464" target="_blank" rel="noopener noreferrer">View Project</a>
-            </div>
-          </div>
-          <div class="row project-row">
-            <div class="col-md-6 col-xs-12 project">
-              <img style="height:50%;width:50%;" src="images/breakhis.PNG" alt="Project 3">
-              <h3>Breast Cancer Histopathological Image Classification</h3>
-		<h4>August 2020</h4>
-		<h4>Tech Stack: Python, Tensorflow, Keras and SciKit-Learn</h4>
-              <p>Conducted analysis on models based on EfficientNet Architecture to classify breast cancer histopathological images.<br>Performance exceeded prior SOTA ResNet & DenseNet models. Presented at IEEE-TEMSMET 2020. </p>
-              <a href="https://ieeexplore.ieee.org/abstract/document/9557441" target="_blank" rel="noopener noreferrer">View Project</a>
-            </div>
-            <div class="col-md-6 col-xs-12 project">
-              <img style="height:50%;width:50%;" src="images/car.PNG" alt="Project 4">
-              <h3>Used Car Price Prediction using Supervised Learning Methodologies</h3><h4>December 2019</h4>
-		<h4>Tech Stack: SAS and Python</h4>
-              <p>Tested the effectiveness of different machine learning models in predicting the price of used cars.<br>Presented at the 2nd World Summit on Advances in Science, Eng. and Technology, Indiana, October 2019.</p>
-              <a href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=ArPyUn4AAAAJ&authuser=2&citation_for_view=ArPyUn4AAAAJ:u5HHmVD_uO8C" target="_blank" rel="noopener noreferrer">View Project</a>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section id="academic-projects">
-        <h2 style="font-weight:900;font-size:40px;">ACADEMIC PROJECTS</h2>
-        <div class="section-content">
-          <div class="row project-row">
-            <div class="col-md-6 col-xs-12 project">
-              <img style="height:270px;width:auto;" src="project5.jpg" alt="Project 5">
-              <h3>Project 5</h3><h4>August 2020</h4><h4>Tech Stack: </h4>
-                            <p>Insert details about your fifth academic project here.</p>
-              <a href="#" target="_blank" rel="noopener noreferrer">View Project</a>
-            </div>
-            <div class="col-md-6 col-xs-12 project">
-              <img style="height:270px;width:auto;" src="project6.jpg" alt="Project 6">
-              <h3>Project 6</h3><h4>August 2020</h4><h4>Tech Stack: </h4>
-              <p>Insert details about your sixth academic project here.</p>
-              <a href="#" target="_blank" rel="noopener noreferrer">View Project</a>
-            </div>
-          </div>
-          <div class="row project-row">
-            <div class="col-md-6 col-xs-12 project">
-              <img style="height:270px;width:auto;" src="project7.jpg" alt="Project 7">
-              <h3>Project 7</h3><h4>August 2020</h4><h4>Tech Stack: </h4>
-              <p>Insert details about your seventh academic project here.</p>
-              <a href="#" target="_blank" rel="noopener noreferrer">View Project</a>
-            </div>
-            <div class="col-md-6 col-xs-12 project">
-              <img style="height:270px;width:auto;" src="project8.jpg" alt="Project 8">
-              <h3>Project 8</h3><h4>August 2020</h4><h4>Tech Stack: </h4>
-              <p>Insert details about your eighth academic project here.</p>
-              <a href="#" target="_blank" rel="noopener noreferrer">View Project</a>
-            </div>
-          </div>
-          <div class="row project-row">
-            <div class="col-md-6 col-xs-12 project">
-              <img style="height:270px;width:auto;" src="project9.jpg" alt="Project 9">
-              <h3>Project 9</h3><h4>August 2020</h4><h4>Tech Stack: </h4>
-              <p>Insert details about your ninth academic project here.</p>
-              <a href="#" target="_blank" rel="noopener noreferrer">View Project</a>
-            </div>
-            <div class="project">
-              <img style="col-md-6 col-xs-12 height:270px;width:auto;" src="project10.jpg" alt="Project 10">
-              <h3>Project 10</h3><h4>August 2020</h4><h4>Tech Stack: </h4>
-              <p>Insert details about your tenth academic project here.</p>
-              <a href="#" target="_blank" rel="noopener noreferrer">View Project</a>
-            </div>
-          </div>
-        </div>
-      </section>
+        <section id="links">
+            <h2>Find me online</h2>
+            <ul>
+                <li><a href="https://www.linkedin.com/in/mukkesh-g/" target="_blank" rel="noopener">LinkedIn</a></li>
+                <li><a href="resume_placeholder.pdf" target="_blank" rel="noopener">Resume (PDF)</a></li>
+                <li><a href="https://scholar.google.com" target="_blank" rel="noopener">Google Scholar</a></li>
+                <li><a href="https://www.worldcubeassociation.org" target="_blank" rel="noopener">Cubing Profile</a></li>
+            </ul>
+        </section>
     </main>
     <footer>
-      <p>Copyright 2023</p>
+        <p>&copy; 2024 Mukkesh Ganesh</p>
     </footer>
-<script>
-      $(document).ready(function() {
-          $("a.scrollLink").click(function(event) {
-              event.preventDefault();
-              $("html, body").animate({
-                  scrollTop: $($(this).attr("href")).offset().top -100
-                }, 200);
-            });
-        });
-    </script>
-  </body>
+</body>
 </html>
