--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="hero-content">
             <img src="assets/images/pfp.png" alt="Mukkesh Ganesh" class="profile-img">
             <h1>Mukkesh Ganesh</h1>
-            <p class="subtitle">Welcome to my digital playground where code meets curiosity</p>
+            <p class="subtitle">WIP with lots of updates incoming. Until then, placeholder pages.</p>
             <div class="cta-buttons">
                 <a href="#projects" class="btn btn-primary">Explore My Work</a>
                 <a href="#resume" class="btn btn-outline">View Resume</a>
